--- a/Jobzterdk/Views/Home/OpretVirk.cshtml
+++ b/Jobzterdk/Views/Home/OpretVirk.cshtml
@@ -30,7 +30,7 @@
                             </select>
                             <input type="email" name="email" placeholder="E-mail" class="txt" required />
                             <input type="password" id="adgangskode" name="adgangskode" placeholder="Adgangskode" class="txt" required />
-                            <input type="password" id="kode" name="kode" placeholder="Gentag adgangskode" class="txt"  />
+                            <input type="password" id="kode" name="kode" placeholder="Gentag adgangskode" class="txt" required />
                         </div>
                     </div>
                 </div>
