--- a/Jobzterdk/Areas/Firm/Views/Shared/_FirmLayout.cshtml
+++ b/Jobzterdk/Areas/Firm/Views/Shared/_FirmLayout.cshtml
@@ -31,7 +31,7 @@
 
                 <ul id="menu-content" class="menu-content collapse out">
                     <li>
-                        <a href="mineAnnoncer.html">
+                        <a href="/Firm/MineAnnonce/">
                             <i class="fa fa-bullhorn fa-lg"></i> Mine annoncer
                         </a>
                     </li>
