--- a/Jobzterdk/Views/Home/OpretVirk.cshtml
+++ b/Jobzterdk/Views/Home/OpretVirk.cshtml
@@ -38,7 +38,7 @@
                     <h4 class="addLogo">Tilføj logo</h4>
                     <div class="form-group">
                         <div class="main-img-preview">
-                            <img class="img-preview img-responsive" src="~/Content/GFX/logo-preview.png" title="Preview Logo">
+                            <img class="img-preview img-responsive" src="~/Content/GFX/JZ logo.png" title="Preview Logo">
                         </div>
                         <div class="input-group">
                             <input id="fakeUploadLogo" class="form-control fake-shadow" placeholder="Filnavn" disabled="disabled">
