--- a/Jobzterdk/Content/CSS/mainSheet.css
+++ b/Jobzterdk/Content/CSS/mainSheet.css
@@ -36,7 +36,7 @@ body {
 
 
 .navbar-inverse {
-    background-color: #ff4b00;
+    background-color: #004178;
     border-color: transparent;
     -webkit-box-shadow: -1px 1px 55px -10px rgba(0,0,0,0.3);
     -moz-box-shadow: -1px 1px 55px -10px rgba(0,0,0,0.3);
@@ -51,7 +51,7 @@ body {
     }
 
         .navbar-inverse .navbar-nav > li > a:hover {
-            color: #ff4b00;
+            color: #004178;
         }
 
     .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
@@ -64,11 +64,11 @@ body {
     }
 
     .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
-        background-color: #ff4b00;
+        background-color: #004178;
     }
 
     .navbar-inverse .navbar-toggle {
-        border-color: #ff4b00;
+        border-color: #004178;
     }
 
 .navbar-toggle {
@@ -78,7 +78,7 @@ body {
     margin-top: 8px;
     margin-right: 15px;
     margin-bottom: 8px;
-    background-color: #ff4b00;
+    background-color: #004178;
     background-image: none;
     border: 1px solid transparent;
     border-radius: 4px;
@@ -93,7 +93,8 @@ body {
 /*NAVBAR MEDIA MAX 766px START*/
 @media only screen and (max-width: 766px) {
     .navbar-header {
-        background-color: #ff4b00 !important;
+        background-color: #004178;
+        !important;
     }
 
     .collapsing, .in {
@@ -126,7 +127,7 @@ body {
 /*NAV A:HOVER STYLE START*/
 li.vertical-line {
     width: 3px;
-    background-color: #ff4b00;
+    background-color: #004178;
     height: 100%;
     margin-top: 10px;
 }
@@ -205,9 +206,9 @@ nav a {
 }
 
     .loginFont:hover {
-        color: #ff4b00;
+        color: #004178;
         transition: all 0.5s ease 0s;
-        border-color: #ff4b00;
+        border-color: #004178;
     }
 
 .huskLoginPos {
@@ -224,7 +225,7 @@ nav a {
 }
 
     .loginAlinks a:hover {
-        color: #ff4b00;
+        color: #004178;
     }
 
 .modal-header {
@@ -294,7 +295,7 @@ nav a {
     }
 
 .findesIkke {
-    color: #ff4b00;
+    color: #004178;
     transition: all 0.5s ease 0s;
 }
 
@@ -334,10 +335,10 @@ h2 {
 }
 
     .btn-VIRK:hover {
-        color: #ff4b00;
+        color: #004178;
         background: rgba(0, 0, 0, 0.2);
         transition: all 0.5s ease 0s;
-        border-color: #ff4b00;
+        border-color: #004178;
     }
 
 .knapBundPos {
@@ -422,10 +423,10 @@ h2 {
 }
 
     .btn-DOWN:hover {
-        color: #ff4b00;
+        color: #004178;
         background: rgba(0, 0, 0, 0.2);
         transition: all 0.5s ease 0s;
-        border-color: #ff4b00;
+        border-color: #004178;
     }
 /*DOWNLOAD APP SLUT*/
 
@@ -498,8 +499,8 @@ h2 {
 
 .txt2:hover {
     background: rgba(0, 0, 0, 0);
-    color: #ff4b00;
-    border-color: #ff4b00;
+    color: #004178;
+    border-color: #004178;
     transition: all 0.5s ease 0s;
 }
 
@@ -518,8 +519,8 @@ button.txt2 {
 
     button.txt2:hover {
         background: rgba(0, 0, 0, 0);
-        color: #ff4b00;
-        border-color: #ff4b00;
+        color: #004178;
+        border-color: #004178;
         transition: all 0.5s ease 0s;
     }
 
@@ -530,9 +531,13 @@ button.txt2 {
 
 /* LOGO UPLOAD START */
 .btn-danger {
-    background-color: #ff4b00;
+    background-color: #004178;
 }
 
+    .btn-danger:hover {
+        background-color: black;
+        transition: all 0.5s ease 0s;
+    }
 
 .fake-shadow {
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
