--- a/Jobzterdk/Areas/Firm/Views/Firm/OpretAnnonce.cshtml
+++ b/Jobzterdk/Areas/Firm/Views/Firm/OpretAnnonce.cshtml
@@ -108,85 +108,101 @@
 
 
 
-            <div class="header">
-                <h4>Vi tilbyder</h4>
-                <input type="text" class="inputToDo" placeholder="Titel...">
-                <span onclick="todo('.inputToDo')" class="addBtn">Tilføj</span>
-                <div class="ToDoList">
 
-                    <ul id="myVI"></ul>
-                </div>
-            </div>
             <div id="myDIV" class="header">
                 <h4>Opgaver</h4>
                 <input type="text" id="myInput" class="inputToDo" placeholder="Titel...">
-                <span onclick="myInput()" class="addBtn">Tilføj</span>
-            </div>
+                <span class="addBtn">Tilføj</span>
 
+            </div>
             <div class="ToDoList">
 
                 <ul id="myUL"></ul>
             </div>
 
+
             <div id="myDIV" class="header">
                 <h4>Kompetencer</h4>
                 <input type="text" id="myKOMInput" class="inputToDo" placeholder="Titel...">
-                <span onclick="myKOMInput()" class="addBtn">Tilføj</span>
-            </div>
+                <span class="addBtn">Tilføj</span>
 
+            </div>
             <div class="ToDoList">
 
                 <ul id="myKOM"></ul>
             </div>
 
-            <div id="myDIV" class="header">
+
+            <div class="header">
                 <h4>Vi tilbyder</h4>
                 <input type="text" id="myVIInput" class="inputToDo" placeholder="Titel...">
-                <span onclick="myVIInput()" class="addBtn">Tilføj</span>
-            </div>
+                <span class="addBtn">Tilføj</span>
 
+            </div>
             <div class="ToDoList">
 
-                <ul id="myVI"></ul>
+                <ul id="myVI">
+                    
+                </ul>
             </div>
-
-
+            <input type="hidden" id="opgaver" name="opgaver" value="" />
+            <input type="hidden" id="kompetencer" name="kompetencer" value="" />
+            <input type="hidden" id="tilbyder" name="tilbyder" value="" />
+            
             @ViewBag.MSG
-            @*<input type="submit" onclick="hest()" value="Opret annonce" name="submit" class="txt2 pull-right">*@
+            <input type="submit" value="Opret annonce" name="submit" class="txt2 pull-right">
+
         </div>
     </form>
 
-    <input type="submit" onclick="hest()" value="Opret annonce" name="submit" class="txt2 pull-right">
-    <input type="text" name="opgaver" value="" />
-    <input type="text" name="kompetencer" value="" />
-    <input type="text" name="tilbyder" value="" />
+
 
 </div>
 <script>
-    var inputToDo = [];
-    var kompetencer = [];
-    var tilbyder = [];
+    $(document).ready(function () {
+        $(".addBtn").click(function () {
+            var input = $(this).prev('input').val();
+            if ($(this).prev('input').val() == "") {
+            }
+            else {
+                $('<li><p> ' + input + '</p><span class="close">\u00D7</span></li>').prependTo($(this).parent().next('div.ToDoList').find('ul[id^="my"]'));
+                $(".close").click(function () {
+                    $(this).parent('li').remove();
+                });
+            }
+            var input = $(this).prev('input').val('');
+        });
+    });
 
-    function todo(data) {
-        console.log(data);
-        var li = document.createElement("li");
-        li.className = "ToDo";
-        var inputValue = $(data).val();
-
-
-
-        if (data == ".inputToDo") {
-
-        }
-        console.log(inputValue);
-        //var t = document.createElement("p")
-        //var k = document.createTextNode(inputValue);
-        //li.appendChild(t);
-        //t.appendChild(k)
-    }
-
-
-
+    $(document).ready(function () {
+        $(".txt2").click(function () {
+            var myUL = [];
+            var myKOM = [];
+            var myVI = [];
+            $('div.ToDoList').find('ul[id^="my"] li').each(function (i, li) {
+                console.log($(li).parent().attr('id'), $(li).find('p').text());
+                if ($(li).parent().attr('id') == "myUL") {
+                    myUL.push($(li).find('p').text());
+                }
+                else if ($(li).parent().attr('id') == "myKOM") {
+                    myKOM.push($(li).find('p').text());
+                }
+                else if ($(li).parent().attr('id') == "myVI") {
+                    myVI.push($(li).find('p').text());
+                }
+            });
+            $("#opgaver").val('');
+            $("#kompetencer").val('');
+            $("#tilbyder").val('');
+            var opgaver = myUL.toString()
+            var kompetencer = myKOM.toString()
+            var tilbyder = myVI.toString()
+            $("#opgaver").val(opgaver);
+            $("#kompetencer").val(kompetencer);
+            $("#tilbyder").val(tilbyder);
+            console.log(opgaver, kompetencer, tilbyder);
+        });
+    });
 
     $(function () {
         $("#slider-range").slider({
@@ -206,194 +222,6 @@
         $("[name=max]").val($("#slider-range").slider("values", 1));
     });
 
-   //#region test
-    //OPGAVER
-    // Create a "close" button and append it to each list item
-    //var myNodelist = document.getElementsByClassName("ToDo");
-    //var i;
-    //for (i = 0; i < myNodelist.length; i++) {
-    //    var span = document.createElement("SPAN");
-    //    var txt = document.createTextNode("\u00D7");
-    //    span.className = "close";
-    //    span.appendChild(txt);
-    //    myNodelist[i].appendChild(span);
-    //}
-    //#endregion
-
-    //// Click on a close button to hide the current list item
-    //var close = document.getElementsByClassName("close");
-    ////var i;
-    ////for (i = 0; i < close.length; i++) {
-    ////    close[i].onclick = function () {
-
-    ////        var div = this.parentElement;
-    ////        div.style.display = "none";
-    ////        alert();
-
-    ////    }
-    ////}
-    //var opgaver = []; // array til Opgave input felt
-    //// Create a new list item when clicking on the "Add" button
-    //function myInput() {
-
-    //    var li = document.createElement("li");
-    //    li.className = "ToDo";
-    //    var inputValue = document.getElementById("myInput").value;
-    //    var t = document.createElement("p")
-    //    var k = document.createTextNode(inputValue);
-    //    li.appendChild(t);
-    //    t.appendChild(k)
-
-
-    //    if (inputValue === '') {
-    //        alert("Du skal skrive en opgavetitel!");
-    //    } else {
-    //        document.getElementById("myUL").appendChild(li);
-    //        opgaver.push(inputValue);
-    //        console.log(opgaver)
-    //    }
-    //    document.getElementById("myInput").value = "";
-
-    //    var span = document.createElement("SPAN");
-    //    var txt = document.createTextNode("\u00D7");
-    //    span.className = "close";
-    //    span.appendChild(txt);
-    //    li.appendChild(span);
-    //    li.attr('onClick', 'luk(this);');
-
-
-
-
-    //}
-
-    ////KOMPETENCER
-    //// Create a "close" button and append it to each list item
-    ////var myNodelist = document.getElementsByClassName("ToDoKOM");
-    ////var i;
-    ////for (i = 0; i < myNodelist.length; i++) {
-    ////    var span = document.createElement("SPAN");
-    ////    var txt = document.createTextNode("\u00D7");
-    ////    span.className = "close";
-    ////    span.appendChild(txt);
-    ////    myNodelist[i].appendChild(span);
-    ////}
-
-    ////// Click on a close button to hide the current list item
-    ////var close = document.getElementsByClassName("close");
-    ////var i;
-    ////for (i = 0; i < close.length; i++) {
-    ////    close[i].onclick = function () {
-    ////        var div = this.parentElement;
-    ////        div.style.display = "none";
-    ////    }
-    ////}
-    //var kompetencer = []; // array til Opgave input felt
-    //// Create a new list item when clicking on the "Add" button
-
-    //function myKOMInput() {
-    //    var li = document.createElement("li");
-    //    li.className = "ToDoKOM";
-    //    var inputValue = document.getElementById("myKOMInput").value;
-    //    var t = document.createElement("p")
-    //    var k = document.createTextNode(inputValue);
-    //    li.appendChild(t);
-    //    t.appendChild(k)
-    //    if (inputValue === '') {
-    //        alert("Du skal skrive en opgavetitel!");
-    //    } else {
-    //        document.getElementById("myKOM").appendChild(li);
-    //        kompetencer.push(inputValue);
-    //        console.log(kompetencer)
-    //    }
-    //    document.getElementById("myKOMInput").value = "";
-
-    //    var span = document.createElement("SPAN");
-    //    var txt = document.createTextNode("\u00D7");
-    //    span.className = "close";
-    //    span.appendChild(txt);
-    //    li.appendChild(span);
-
-    //    for (i = 0; i < close.length; i++) {
-    //        close[i].onclick = function () {
-    //            var li = this.closest("li").firstChild.innerHTML;
-    //            var div = this.parentElement;
-    //            div.style.display = "none";
-    //            kompetencer.splice($.inArray(li, kompetencer), 1);
-    //            console.log(kompetencer)
-    //        }
-    //    }
-    //}
-
-
-
-    ////VI TILBYDER
-    //// Create a "close" button and append it to each list item
-    ////var myNodelist = document.getElementsByClassName("ToDoVI");
-    ////var i;
-    ////for (i = 0; i < myNodelist.length; i++) {
-    ////    var span = document.createElement("SPAN");
-    ////    var txt = document.createTextNode("\u00D7");
-    ////    span.className = "close";
-    ////    span.appendChild(txt);
-    ////    myNodelist[i].appendChild(span);
-    ////}
-
-    ////// Click on a close button to hide the current list item
-    ////var close = document.getElementsByClassName("close");
-    ////var i;
-    ////for (i = 0; i < close.length; i++) {
-    ////    close[i].onclick = function () {
-    ////        var div = this.parentElement;
-    ////        div.style.display = "none";
-    ////    }
-    ////}
-    //var tilbyder = []; // array til Opgave input felt
-    //// Create a new list item when clicking on the "Add" button
-    //function myVIInput() {
-    //    var li = document.createElement("li");
-    //    li.className = "ToDo";
-    //    var inputValue = document.getElementById("myVIInput").value;
-    //    var t = document.createElement("p")
-    //    var k = document.createTextNode(inputValue);
-    //    li.appendChild(t);
-    //    t.appendChild(k)
-    //    if (inputValue === '') {
-    //        alert("Du skal skrive en opgavetitel!");
-    //    } else {
-    //        document.getElementById("myVI").appendChild(li);
-    //        tilbyder.push(inputValue);
-    //        console.log(tilbyder)
-    //    }
-    //    document.getElementById("myVIInput").value = "";
-
-    //    var span = document.createElement("SPAN");
-    //    var txt = document.createTextNode("\u00D7");
-    //    span.className = "close";
-    //    span.appendChild(txt);
-    //    li.appendChild(span);
-
-    //    for (i = 0; i < close.length; i++) {
-    //        close[i].onclick = function () {
-    //            var li = this.closest("li").firstChild.innerHTML;
-    //            var div = this.parentElement;
-    //            div.style.display = "none";
-    //            tilbyder.splice($.inArray(li, tilbyder), 1);
-    //            console.log(tilbyder)
-    //        }
-    //    }
-    //}
-
-    //function hest() {
-    //    var test = opgaver.toString()
-    //    var test1 = kompetencer.toString()
-    //    var test2 = tilbyder.toString()
-    //    $('[name=opgaver]').val("")
-    //    $('[name=kompetencer]').val("")
-    //    $('[name=tilbyder]').val("")
-    //    $('[name=opgaver]').val(test)
-    //    $('[name=kompetencer]').val(test1)
-    //    $('[name=tilbyder]').val(test2)
-    //    console.log(test, test1, test2)
-    //};
+ 
 
 </script>
