--- a/Jobzterdk/Content/CSS/adminSheet.css
+++ b/Jobzterdk/Content/CSS/adminSheet.css
@@ -10,6 +10,9 @@ body {
     background-size: cover;*/
     min-height: 100%;
 }
+.hidden{
+    display:none;
+}
 
 
 nav {
@@ -290,6 +293,7 @@ table tr td {
     right: 0;
     top: 0;
     padding: 12px 16px 12px 16px;
+    z-index:1;
 }
 
     .close:hover {
